[tool.poetry]
name = "day-20"
version = "0.1.0"
description = ""
authors = ["GabdullinAleksandr <alexrexp@gmail.com>"]
readme = "README.md"
packages = [{include = "day_20"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
